# annonars

./: .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  ForRelease  README.md  build.rs  codecov.yml  openapi.schema.yaml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  release-please.yml  rust.yml
examples/: cli.rs
openapis/: panelapp.json
protos/: fetch.sh
protos/annonars/clinvar/: minimal.proto  per_gene.proto  sv.proto
protos/annonars/clinvar_data/: class_by_freq.proto  clinvar_public.proto  extracted_vars.proto  gene_impact.proto  phenotype_link.proto
protos/annonars/common/: versions.proto
protos/annonars/cons/: base.proto
protos/annonars/dbsnp/: base.proto
protos/annonars/functional/: refseq.proto
protos/annonars/genes/: base.proto
protos/annonars/gnomad/: exac_cnv.proto  gnomad2.proto  gnomad3.proto  gnomad4.proto  gnomad_cnv4.proto  gnomad_sv2.proto  gnomad_sv4.proto  mtdna.proto  vep_common.proto  vep_gnomad2.proto  vep_gnomad3.proto  vep_gnomad4.proto
protos/annonars/helixmtdb/: base.proto
protos/annonars/panelapp/: models.proto
protos/annonars/regions/: clingen.proto
protos/annonars/server/: interface.proto
protos/clinvar_data/: class_by_freq.proto  clinvar_public.proto  extracted_vars.proto  gene_impact.proto  phenotype_link.proto
src/: error.rs  lib.rs  main.rs
src/clinvar_genes/: mod.rs  pbs.rs
src/clinvar_genes/cli/: import.rs  mod.rs  query.rs  reading.rs
src/clinvar_minimal/: mod.rs  pbs.rs
src/clinvar_minimal/cli/: import.rs  mod.rs  query.rs  reading.rs
src/clinvar_sv/: mod.rs
src/clinvar_sv/cli/: import.rs  mod.rs  query.rs
src/common/: cli.rs  keys.rs  mod.rs  noodles.rs  rocks_utils.rs  spdi.rs
src/common/snapshots/: annonars__common__keys__test__pos-2.snap  annonars__common__keys__test__pos.snap  annonars__common__keys__test__var-2.snap  annonars__common__keys__test__var.snap
src/cons/: mod.rs  models.rs  pbs.proto3  pbs.rs
src/cons/cli/: import.rs  mod.rs  query.rs
src/db_utils/: mod.rs
src/db_utils/cli/: copy.rs  dump_meta.rs  mod.rs
src/dbsnp/: mod.rs  pbs.proto3  pbs.rs
src/dbsnp/cli/: import.rs  mod.rs  query.rs
src/freqs/: mod.rs
src/freqs/cli/: mod.rs  query.rs  reading.rs
src/freqs/serialized/: auto.rs  mod.rs  mt.rs  xy.rs
src/functional/: mod.rs
src/functional/cli/: import.rs  mod.rs  query.rs
src/genes/: mod.rs  pbs.rs
src/genes/cli/: data.rs  import.rs  mod.rs  query.rs
src/gnomad_mtdna/: mod.rs  pbs.proto3  pbs.rs
src/gnomad_mtdna/cli/: import.rs  mod.rs  query.rs
src/gnomad_mtdna/snapshots/: annonars__gnomad_mtdna__pbs__test__record_from_vcf_allele.snap  annonars__gnomad_mtdna__pbs__test__vep_from_string.snap
src/gnomad_nuclear/: mod.rs  pbs.proto3  pbs.rs
src/gnomad_nuclear/cli/: import.rs  mod.rs  query.rs
src/gnomad_nuclear/snapshots/: annonars__gnomad_nuclear__pbs__test__record_from_vcf_allele_gnomad_exomes.snap  annonars__gnomad_nuclear__pbs__test__record_from_vcf_allele_gnomad_genomes.snap  annonars__gnomad_nuclear__pbs__test__vep_from_string_indel.snap  annonars__gnomad_nuclear__pbs__test__vep_from_string_snv.snap
src/gnomad_pbs/: common.rs  exac_cnv.rs  gnomad2.rs  gnomad3.rs  gnomad_cnv4.rs  gnomad_sv2.rs  gnomad_sv4.rs  mod.rs  mtdna.rs  nuclear.rs  vep_common.rs  vep_gnomad2.rs  vep_gnomad3.rs
src/gnomad_pbs/snapshots/: annonars__gnomad_pbs__gnomad2__test__record_from_vcf_allele_gnomad_exomes_grch37.snap  annonars__gnomad_pbs__gnomad2__test__record_from_vcf_allele_gnomad_exomes_grch38.snap  annonars__gnomad_pbs__gnomad2__test__record_from_vcf_allele_gnomad_genomes_grch37.snap  annonars__gnomad_pbs__gnomad3__test__record_from_vcf_allele_gnomad_genomes_grch38.snap  annonars__gnomad_pbs__mtdna__test__record_from_vcf_allele.snap  annonars__gnomad_pbs__mtdna__test__record_from_vcf_allele.snap.new  annonars__gnomad_pbs__nuclear__test__record_from_vcf_allele_gnomad_exomes_grch37.snap.new  annonars__gnomad_pbs__nuclear__test__record_from_vcf_allele_gnomad_exomes_grch38.snap.new  annonars__gnomad_pbs__nuclear__test__record_from_vcf_allele_gnomad_genomes_grch37.snap.new  annonars__gnomad_pbs__vep_gnomad2__test__vep_from_string_indel.snap  annonars__gnomad_pbs__vep_gnomad2__test__vep_from_string_indel.snap.new  annonars__gnomad_pbs__vep_gnomad2__test__vep_from_string_snv.snap  annonars__gnomad_pbs__vep_gnomad2__test__vep_from_string_snv.snap.new  annonars__gnomad_pbs__vep_gnomad3__test__vep_from_string.snap  annonars__gnomad_pbs__vep_gnomad3__test__vep_from_string.snap.new
src/gnomad_sv/: mod.rs
src/gnomad_sv/cli/: mod.rs  query.rs
src/helixmtdb/: mod.rs  pbs.proto3  pbs.rs
src/helixmtdb/cli/: import.rs  query.rs
src/pbs/: clinvar.rs  clinvar_data.rs  common.rs  cons.rs  dbsnp.rs  functional.rs  genes.rs  helixmtdb.rs  mod.rs  panelapp.rs  regions.rs  server.rs
src/pbs/annonars/: mod.rs
src/pbs/gnomad/: exac_cnv.rs  gnomad2.rs  (+11 more)
src/regions/: mod.rs
src/server/: mod.rs  schema.rs
src/tsv/: code.rs  coding.rs  mod.rs  schema.rs
tests/clinvar-genes/: bootstrap.sh  clinvar-variants-grch37-seqvars.jsonl  clinvar-variants-grch38-seqvars.jsonl  gene-frequency-report.jsonl  gene-variant-report.jsonl
tests/clinvar-minimal/: bootstrap.sh  clinvar-seqvars-grch37-flagged.jsonl  clinvar-seqvars-grch37-no-unflagged.jsonl  clinvar-seqvars-grch37-tgds.jsonl  clinvar-seqvars-grch37-tgds.tsv
tests/clinvar-sv/: boostrap.sh  clinvar-variants-grch37-seqvars.jsonl  clinvar-variants-grch37-strucvars.jsonl
tests/clinvar-svs/: clinvar-variants-grch37-seqvars.jsonl
tests/freqs/: bootstrap.sh  gnomad-exomes.1.vcf.bgz  gnomad-exomes.1.vcf.bgz.tbi  gnomad-exomes.X.vcf  gnomad-exomes.X.vcf.bgz.tbi  gnomad-exomes.Y.vcf  gnomad-genomes.1.vcf  gnomad-genomes.1.vcf.bgz.tbi  gnomad-genomes.X.vcf.bgz
tests/functional/: bootstrap.sh
tests/gnomad-mtdna/: bootstrap.sh  gnomad-mtdna.vcf  gnomad-mtdna.vcf.bgz  gnomad-mtdna.vcf.bgz.tbi
tests/regions/: bootstrap.sh
tests/server/: bootstrap.sh
utils/: install-protoc.sh
utils/docker/: Dockerfile  build-docker.sh  entrypoint.sh
utils/terraform/: main.tf
(+831 files in other folders)
