[package]
name = "annonars"
version = "0.41.1"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Rust template repository"
license = "Apache-2.0"
repository = "https://github.com/varfish-org/annonars"
readme = "README.md"
autobins = false
exclude = ["/tests"]

[lib]
name = "annonars"
path = "src/lib.rs"

[[bin]]
name = "annonars"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0"
bgzip = "0.3"
bio = "2.0.3"
biocommons-bioutils = "0.1.0"
boolvec = "0.2"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap-verbosity-flag = "2.2"
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.2"
enum-map = { version = "2.7.3", features = ["serde"] }
env_logger = "0.11"
erased-serde = "0.4.2"
flate2 = "1.0"
indexmap = { version = "2.6", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.13.0"
log = "0.4"
pbjson = "0.7"
pbjson-types = "0.7"
prost = "0.13"
rayon = "1.8"
rocksdb-utils-lookup = "0.4"
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
rustc-hash = "2.0.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.9", features = ["alloc", "macros", "indexmap_2"], default-features = false }
serde_yaml = "0.9"
strum = { version = "0.26", features = ["strum_macros", "derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "indexmap", "preserve_order", "yaml"] }

[dependencies.noodles]
version = "0.77.0"
features = ["bed", "bgzf", "core", "csi", "gff", "tabix", "vcf"]

[build-dependencies]
anyhow = "1.0"
pbjson-build = "0.7"
prost-build = "0.13"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
log = "0.4"
pretty_assertions = "1.4"
rstest = "0.23.0"
temp_testdir = "0.2"
test-log = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2.4"

# Compile insta with full optimization.
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3
