[package]
name = "annonars"
version = "0.44.0"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Genome annotation based on Rust and RocksDB"
license = "Apache-2.0"
repository = "https://github.com/varfish-org/annonars"
readme = "README.md"
autobins = false
exclude = ["/tests"]

[lib]
name = "annonars"
path = "src/lib.rs"

[[bin]]
name = "annonars"
path = "src/main.rs"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator", "rocksdb/jemalloc"]

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0"
bgzip = "0.3"
bio = "2.3.0"
biocommons-bioutils = "0.1.0"
boolvec = "0.2"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap-verbosity-flag = "3.0"
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
enum-map = { version = "2.7.3", features = ["serde"] }
env_logger = "0.11"
erased-serde = "0.4.6"
flate2 = "1.1"
indexmap = { version = "2.10", features = ["serde"] }
indicatif = { version = "0.18", features = ["rayon"] }
itertools = "0.14.0"
log = "0.4"
pbjson = "0.8"
pbjson-types = "0.8"
prost = "0.14"
rayon = "1.8"
rocksdb-utils-lookup = "0.5.0"
rocksdb = { version = "0.23", features = ["multi-threaded-cf"] }
rustc-hash = "2.1.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.14", features = ["alloc", "macros", "indexmap_2"], default-features = false }
serde_yaml = "0.9"
strum = { version = "0.27", features = ["strum_macros", "derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "indexmap", "preserve_order", "yaml"] }
tempfile = "3.21.0"
lru = "0.16.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dependencies.noodles]
version = "0.97.0"
features = ["bed", "bgzf", "core", "csi", "gff", "tabix", "vcf"]

[build-dependencies]
anyhow = "1.0"
pbjson-build = "0.8"
prost-build = "0.14"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml"] }
log = "0.4"
pretty_assertions = "1.4"
rstest = "0.26.1"
temp_testdir = "0.2"
test-log = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2.4"

# Compile insta with full optimization.
[profile.dev.package.insta]
opt-level = 3
